--- a/index.html
+++ b/index.html
@@ -36,24 +36,68 @@
                 <a href="http://">edit profile</a>
                 <img src="user-circle.png" alt="CardInfo_profile_icon" class="profile_icon">
             </div>
+<!-------------------------------Education container starts here------------------------->
             <div class="education_Container">
                 <header class="black_header">
                     <div class="header_center_text">Education</div>
                 </header>
+                <main class="education_main_container">
+                    <h2 class="font ">Codding Dojo - Full Stack bootcamp</h1>
+                    <h3 class="font color_gray">Dec 2019 - Mar 2020</h3>
+                    <h3 class="font">Triple black belt in Python, MERN, and C#....</h3>
+                </main>
             </div>
         </div>
+        <!-------------------------------Connection Requests starts here------------------------->
         <div class="main_col">
             <div class="connectionsRequest_Container">
                 <header class="black_header">
-                <div class="header_center_circle ">+2</div>
+                <div class="header_center_circle "><p>+2</p></div>
                 <div class="header_center_text">Requested Connections</div>
                 </header>
+                <main class="main_connection_request_container">
+                    <div class="request_row">
+                        <img src="user-circle.png" class="icon_profile_image">
+                        <p class="font request_name">Todd E</p>
+                        <img src="accept-circle.png" class="icon_accept_circle">
+                        <img src="close-circle.png" class="icon_reject_circle">
+                    </div>
+                    <div class="request_row">
+                        <img src="user-circle.png" class="icon_profile_image">
+                        <p class="font request_name">Phile K</p>
+                        <img src="accept-circle.png" class="icon_accept_circle">
+                        <img src="close-circle.png" class="icon_reject_circle">
+                    </div>
+                </main>
             </div>
+        <!-------------------------------Connection starts here------------------------->
             <div class="connections_Container">
                 <header class="black_header">
-                    <div class="header_center_circle">+500</div>
+                    <div class="header_center_circle"><p>+500</p></div>
                     <div class="header_center_text"> Connections</div>
                 </header>
+                <main class="connections_main">
+                    <div class="connection_row">
+                        <img src="user-circle.png" class="icon_profile_image">
+                        <p class="font connection_name font_larger">Adrien D</p>
+                    </div>
+                    <div class="connection_row">
+                        <img src="user-circle.png" class="icon_profile_image">
+                        <p class="font connection_name font_larger">Anne J</p>
+                    </div>
+                    <div class="connection_row">
+                        <img src="user-circle.png" class="icon_profile_image">
+                        <p class="font connection_name font_larger">Alayen T</p>
+                    </div>
+                    <div class="connection_row">
+                        <img src="user-circle.png" class="icon_profile_image">
+                        <p class="font connection_name font_larger">Arry Y</p>
+                    </div>
+                </main>
+                <div class="view_more_container">
+                    <a href="#">View More</a>
+                </div>
+                
             </div>
         </div>
 
